2011-10-19  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: avoid spurious failure of 'uninstall-fail.test' on Cygwin
	* tests/uninstall-fail.test: Be sure to really skip this test
	on systems that allows files to be removed from unwritable
	directories.  Motivated by a spurious failure on Cygwin 1.5.

2011-10-17  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix spurious failure with autoconf 2.62
	* tests/aclocal-path-precedence.test: Rewrite configure.in,
	rather than appending to it, to avoid spurious failures (at
	least with autoconf 2.62) due to repeated calls to AC_INIT.
	Also, add package name and version arguments to AC_INIT, to
	avoid spurious errors from automake.

2011-10-16  Stefano Lattarini  <stefano.lattarini@gmail.com>

	docs: avoid using colon character inside arguments of @pxref
	Fixes automake bug#9753
	* doc/automake.texi (VPATH Builds): Avoid using colon character
	`:' inside arguments of @pxref, as this can cause problems in
	the generated `.info' files, and such an usage will be explicitly
	forbidden by future texinfo documentation.
	* THANKS: Update.
	Reported by Дилян Палаузов.

2011-10-17  Stefano Lattarini  <stefano.lattarini@gmail.com>

	refactor: improve signature of 'check_directory' sub in automake
	* automake.in (check_directory): Take the relative directory
	the directory to be checked is expected to be found into as
	an optional parameter, rather than reading it from the global
	variable `$relative_dir'.
	(scan_autoconf_traces, check_directories_in_var): Adjust.

2011-10-07  Stefano Lattarini  <stefano.lattarini@gmail.com>

	parallel-tests: warn on conditional TEST_EXTENSIONS definition
	Before this change, automake would have still bailed out, but
	with a confusing error message (about an invalid redefinition
	of TEST_EXTENSIONS).
	* automake.in (handle_tests): Warn explicitly if TEST_EXTENSIONS
	has conditional contents.
	* tests/test-extensions-con.test: New test.
	* tests/Makefile.am (TESTS): Add it.