@@ -21,7 +21,7 @@
 set -e
 
 $ACLOCAL --print-ac-dir
-test "`$ACLOCAL --print-ac-dir`" = "$top_testsrcdir/m4"
+test "`$ACLOCAL --print-ac-dir`" = "$top_testsrcdir/m4/acdir"
 
 $ACLOCAL -Wno-obsolete --acdir foo --print-ac-dir
 test "`$ACLOCAL -Wno-obsolete --acdir foo --print-ac-dir`" = foo
@@ -30,6 +30,7 @@ $ACLOCAL --system-acdir /bar --print-ac-dir
 test "`$ACLOCAL --system-acdir /bar --print-ac-dir`" = /bar
 
 $ACLOCAL --automake-acdir /bar --print-ac-dir
-test "`$ACLOCAL --automake-acdir /bar --print-ac-dir`" = "$top_testsrcdir/m4"
+test "`$ACLOCAL --automake-acdir /bar --print-ac-dir`" = \
+    "$top_testsrcdir/m4/acdir"
 
 :
