@@ -1,3 +1,8 @@
+2011-10-20  Jim Meyering  <meyering@redhat.com>
+
+	tests: fix aclocal-print-acdir.test
+	* tests/aclocal-print-acdir.test: Adjust to pass.
+
 2011-10-19  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	tests: avoid spurious failure of 'uninstall-fail.test' on Cygwin
